FIXED GAP

--- a/TETRAS/style.css
+++ b/TETRAS/style.css
@@ -100,7 +100,7 @@ header {
     align-items: center;
     justify-content: center;
     gap: 15px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 #menu-buttons button {
     font-size: 60px;
